[package]
name = "hocuspocus_rust_crate"
version = "0.1.0"
edition = "2021"
description = "Proof of concept publishing crates to crates.io"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3           # optimization level 0-1-2-3